feat(dashboard): reportes coor empresarial completo